added onclick on buttons, added local storage, added color coding on each hour

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -30,6 +30,10 @@ textarea{
   border-radius: 15px;
 }
 
+.timeblocks {
+  margin-bottom: 2rem;
+}
+
 .row {
   white-space: pre-wrap;
   height: 80px;
